--- a/public/PlayerandCoaches.html
+++ b/public/PlayerandCoaches.html
@@ -46,7 +46,7 @@
                         <p>check</p>
                     </div>
                     <div class="pcitem">
-                        <img src="https://s.hdnux.com/photos/01/12/64/62/19614875/15/1200x0.jpg">
+                        <img class="manzimg" src="https://s.hdnux.com/photos/01/12/64/62/19614875/15/1200x0.jpg">
                     </div>
 
                 </div>
