This is a commit message

--- a/public/PlayerandCoaches.html
+++ b/public/PlayerandCoaches.html
@@ -80,7 +80,9 @@
         <h2 class="sectionhead">Coaches</h2>
 
 
-
+        <h1 class="sectionhead">Player Search and Stats</h1>
+        <h1 class="sectionhead">Coach Search and Records</h1>
+        <h1 class="sectionhead">Recruiting and Draft Data</h1>
 
         <script>
             var coll = document.getElementsByClassName("collapsible");
