--- a/public/Statsandrecords.html
+++ b/public/Statsandrecords.html
@@ -31,17 +31,17 @@
 
         <h1 id="pagetitle">Stats and records</h1>
 
-
+        <h1 class="sectionhead">Records and Boxscores</h1>
         <button type="button" class="collapsible">Head to Head Records</button>
         <div class="content">
             <form class="form">
-                <p>Team Name:</p>
+                <p>Opponent:</p>
                 <input type="text" placeholder="Team Name:" class="mainLoginInput">
                 <input type="submit">
             </form>
         </div>
 
-        <button type="button" class="collapsible">Yearly Records</button>
+        <button type="button" class="collapsible">Yearly Record</button>
         <div class="content">
             <form class="form">
                 <p>Year:</p>
@@ -50,10 +50,10 @@
             </form>
         </div>
 
-        <button type="button" class="collapsible">Game Records</button>
+        <button type="button" class="collapsible">Game Boxscores</button>
         <div class="content">
             <form class="form">
-                <p>Team:</p>
+                <p>Opponent:</p>
                 <input type="text" placeholder="Team:" class="mainLoginInput">
                 <p>Year:</p>
                 <input type="text" placeholder="Year:" class="mainLoginInput">
@@ -62,10 +62,83 @@
         </div>
 
 
+        <h1 class="sectionhead">Advanced Stats and Metrics</h1>
 
+        <button type="button" class="collapsible">Team Stats by Season</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
 
+        <button type="button" class="collapsible">Advanced Team Metrics by Game</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
 
+        <button type="button" class="collapsible">Advanced Team Metrics by Season</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
 
+        <button type="button" class="collapsible">PPA/EPA Per Game</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
+
+        <h1 class="sectionhead">Rankings and Ratings Metrics</h1>
+
+        <button type="button" class="collapsible">Rankings By Week</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
+
+        <button type="button" class="collapsible">SP+, SRS, and Elo Ratings by Year</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
+        
+        <h1 class="sectionhead">Play and Drive Data</h1>
+
+        <button type="button" class="collapsible">Drives By Game</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
+
+        <button type="button" class="collapsible">Play by Play Data By Game</button>
+        <div class="content">
+            <form class="form">
+                <p>Year:</p>
+                <input type="text" placeholder="Year:" class="mainLoginInput">
+                <input type="submit">
+            </form>
+        </div>
 
 
 
