--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
+    <!-- Boostrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
 
  </head>
 
@@ -13,7 +16,9 @@
      <div class="navwrapper">
 
          <a href="index.html">
-             <button class="headerbtns"type="button">Home</button>
+          <!-- btn-primary:
+          Try to get this to work with your buttons -->
+             <button class="headerbtns btn-primary"type="button">Home</button>
          </a>
 
 
@@ -41,11 +46,11 @@
      <div class="basicinfo">
 
         <div class="basicitem1">
-           <img class="center"src="https://lh3.googleusercontent.com/8ffnDBf6aXIfJoFNERqFLXZv2DGfOrLLagQxepKVMzAe8G_3HLzyH6Wf5C_xlAaY1awnEWT4o4o0ANopIPpbwC9xTd2noujdjBxXnBcgbiALZkPdKvXviBGp4wn_ilxLorkDrk78Zg=w600-h315-p-k" />
+           <img class="img-responsive" class="center"src="https://lh3.googleusercontent.com/8ffnDBf6aXIfJoFNERqFLXZv2DGfOrLLagQxepKVMzAe8G_3HLzyH6Wf5C_xlAaY1awnEWT4o4o0ANopIPpbwC9xTd2noujdjBxXnBcgbiALZkPdKvXviBGp4wn_ilxLorkDrk78Zg=w600-h315-p-k" />
 
-           <img class="center"src="https://s.yimg.com/ny/api/res/1.2/jdBisIV6QFAtsc1GDl7Ieg--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTQ0OQ--/https://s.yimg.com/uu/api/res/1.2/yZ_hMJhA31lLQSDqrfM_mQ--~B/aD0yMzQ0O3c9MzM0MDthcHBpZD15dGFjaHlvbg--/http://media.zenfs.com/en_US/Sports/USA_Today/20130104_mje_se2_405-e785a998b7092095db8b6dbcb3a4c53b" />
+           <img class="img-responsive" src="https://s.yimg.com/ny/api/res/1.2/jdBisIV6QFAtsc1GDl7Ieg--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTQ0OQ--/https://s.yimg.com/uu/api/res/1.2/yZ_hMJhA31lLQSDqrfM_mQ--~B/aD0yMzQ0O3c9MzM0MDthcHBpZD15dGFjaHlvbg--/http://media.zenfs.com/en_US/Sports/USA_Today/20130104_mje_se2_405-e785a998b7092095db8b6dbcb3a4c53b" />
            
-           <img class="center" src="http://content.wkyc.com/photo/2014/10/17/635491596262362580-USATSI-6734116_2960175_ver1.0.jpg"/>
+           <img class="img-responsive" class="center" src="http://content.wkyc.com/photo/2014/10/17/635491596262362580-USATSI-6734116_2960175_ver1.0.jpg"/>
         </div>
 
 
@@ -641,7 +646,7 @@
         </figure> 
 
         <figure>
-          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cb/Swc-logo-tshof-1.jpg/150px-Swc-logo-tshof-1.jpg">
+          <img src="https://www.logolynx.com/images/logolynx/ef/efc850d3cc86fe19e38b77160efae030.jpeg">
           <figcaption>Southwest Conference</figcaption>
         </figure>
 
@@ -713,6 +718,10 @@
       </div>
 
 </div>
+
+<footer class="foot">
+  <p>Author: Shanti Patel</p>
+</footer>
 
  </body>
 
